--- a/arine-react/src/Css/main.css
+++ b/arine-react/src/Css/main.css
@@ -1,5 +1,181 @@
-.mainImageCss {
+.body-wrap,.common-section {
+    width: 100%;
+    display: flex;
+    flex-direction: column
+}
 
+.common-section {
+    align-items: center
+}
+
+.common-section.first {
+    margin-top: 60px
+}
+
+.common-section .common-wrap {
+    width: 1200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center
+}
+
+.absolute-wrap {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0
+}
+
+.common-section .common-wrap.w-100 {
     width: 100%
+}
 
+.swiper,.swiper .swiper-wrapper,.swiper .swiper-wrapper .swiper-slide {
+    width: 100%;
+    height: 100%
+}
+
+.main-section1 {
+    width: 100%;
+    padding-top: 40.9%
+}
+
+.main-section1 .slide-wrap {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-size: cover;
+    background-position: 50%;
+    background-repeat: no-repeat
+}
+
+.main-section1 .slide-wrap.slide1 {
+    /* background-image: url(/_next/static/media/main_slide1.903cb52d.jpg) */
+}
+
+.main-section1 .slide-wrap.slide1 .text1 {
+    font-size: 2em;
+    color: var(--black);
+    transition: 1s ease-in-out;
+    transition-delay: .25s;
+    transform: translateY(100px);
+    opacity: 0;
+    text-align: center
+}
+
+.main-section1 .slide-wrap.slide1 .text1.active {
+    transition: 1s ease-in-out;
+    transition-delay: .25s;
+    transform: translateY(0);
+    opacity: 1
+}
+
+.main-section1 .slide-wrap.slide1 .text2 {
+    font-size: 4em;
+    margin-top: 30px;
+    line-height: 1.6;
+    color: var(--black);
+    transition: 1s ease-in-out;
+    transition-delay: .5s;
+    transform: translateY(100px);
+    opacity: 0;
+    text-align: center
+}
+
+.main-section1 .slide-wrap.slide1 .text2.active {
+    transition: 1s ease-in-out;
+    transition-delay: .5s;
+    transform: translateY(0);
+    opacity: 1
+}
+
+.main-section1 .slide-wrap.slide2 {
+    /* background-image: url(/_next/static/media/main_slide2.1d2b2c32.jpg) */
+}
+
+.main-section1 .slide-wrap.slide2 .text1 {
+    font-size: 2em;
+    color: var(--black);
+    transition: 1s ease-in-out;
+    transition-delay: .25s;
+    transform: translateY(100px);
+    opacity: 0;
+    text-align: center
+}
+
+.main-section1 .slide-wrap.slide2 .text1.active {
+    transition: 1s ease-in-out;
+    transition-delay: .25s;
+    transform: translateY(0);
+    opacity: 1
+}
+
+.main-section1 .slide-wrap.slide2 .text2 {
+    font-size: 4em;
+    margin-top: 30px;
+    line-height: 1.6;
+    color: var(--black);
+    transition: 1s ease-in-out;
+    transition-delay: .5s;
+    transform: translateY(100px);
+    opacity: 0;
+    text-align: center
+}
+
+.main-section1 .slide-wrap.slide2 .text2.active {
+    transition: 1s ease-in-out;
+    transition-delay: .5s;
+    transform: translateY(0);
+    opacity: 1
+}
+
+.main-section1 .slide-wrap.slide3 {
+    /* background-image: url(/_next/static/media/main_slide3.5dddf349.jpg) */
+}
+
+.main-section1 .slide-wrap.slide3 .text1 {
+    font-size: 2.5em;
+    color: var(--black);
+    transition: 1s ease-in-out;
+    transition-delay: .25s;
+    transform: translateY(100px);
+    opacity: 0;
+    margin-top: 6%;
+    text-shadow: 1px 1px 2px var(--black);
+    text-align: center
+}
+
+.main-section1 .slide-wrap.slide3 .text1.active {
+    transition: 1s ease-in-out;
+    transition-delay: .25s;
+    transform: translateY(0);
+    opacity: 1
+}
+
+.main-section1 .slide-wrap.slide3 .text2 {
+    font-size: 1.6em;
+    margin-top: 30px;
+    line-height: 1.6;
+    color: var(--white2);
+    transition: 1s ease-in-out;
+    transition-delay: .5s;
+    transform: translateY(100px);
+    opacity: 0;
+    text-shadow: 1px 1px 2px var(--black);
+    text-align: center
+}
+
+.main-section1 .slide-wrap.slide3 .text2.active {
+    transition: 1s ease-in-out;
+    transition-delay: .5s;
+    transform: translateY(0);
+    opacity: 1
+}
+
+.main-section1-container {
+    z-index: 2
 }
